YelpCamp/v3/readme.md
#YelpCamp

* Add Landing Page
* Add Campgrounds Page that lists all campgrounds


Each Campground has:
	* Name
	* Image
	* 

#Layout and Basic Styling
* Create out header and footer partials
* Add in Bootstrap

#Add Mongoose
* Install and configure Mongoose
* Setup campground model
*  Use campground model inside of our routes

#Show Page
* Review the RESTful routes we've seen so far
*  Add description to our campground model
*   Show db.collection.drop()
*   Add a show route/template

#Refactor Mongoose Code
* Create a models directory
* Use module.exports
* Require everything correctly!


#Add seed File
* Add a seeds.js file
* Run the seeds file every time the server starts

# Add th Comment Model!!!
* Make our errors go away!!!
* Associate comments with campground show page

#Comment New/Create
* Discuss nested routes
* Add the comment new and create routes
* Add the new comment form




RESTFUL ROUTES
name---url/path/--VERB--Desc.
====================================================
INDEX /dogs      GET   Display a list of all dog
NEW   /dogs/new  GET   Dispays form to make a new dog
CREATE /dogs     POST  Add new dog to DB
SHOW  /dogs/:id  GET   Shows more info about one dog


USED ON YELP_CAMP APP
====================================================
INDEX       /campgrounds
NEW         /campgrounds/new
CREATE      /campgrounds
SHOW        /campgrounds/:id

====================================================
NEW         campgrounds/:id/comments/new    GET
CREATE      campgrounds/:id/comments        POST